# anisync

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 65969d311bc5_initial_schema.py
anisync.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
api/app/: config.py  db.py  embeddings.py  main.py  models.py  realtime.py  security.py
api/app/ml/: kmeans.py
api/app/scripts/: init_db.py  preprocess_catalog.py  seed_demo.py  sync_media_to_supabase.py
api/app/services/: recommender.py
api/benchmark/: config.py  llm_translate.py  run.py
api/benchmark/algorithms/: groupfit.py  groupfit_pos_text.py
api/benchmark/methods/: base.py
api/tests/: test_kmeans.py
app/: db.py  embeddings.py  kmeans.py  main.py  models.py  recommendations.py  security.py  settings.py
app/static/: styles.css
app/templates/: base.html  create_room.html  dashboard.html  login.html  register.html  results.html  room.html
benchmark/: README.md
scripts/: load_catalog_to_db.py  preprocess_anime.py  seed_test_users.py
web/: package-lock.json  package.json
web/src/: App.tsx  api.ts  index.css
