[project]
name = "anisync"
version = "0.1.0"
description = "AniSync: private anime group recommendation web app"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "fastapi==0.135.3",
  "uvicorn[standard]==0.42.0",
  "Jinja2==3.1.6",
  "SQLAlchemy==2.0.49",
  "alembic==1.18.4",
  "psycopg[binary]==3.3.3",
  "pydantic-settings==2.13.1",
  "python-dotenv==1.2.2",
  "pwdlib[argon2]==0.3.0",
  "python-multipart==0.0.22",
  "email-validator==2.3.0",
  "sentence-transformers==5.3.0",
  "torch==2.11.0",
  "numpy==2.4.4",
  "scikit-learn==1.8.0",
  "pgvector==0.4.2",
  "itsdangerous",
]

[dependency-groups]
dev = [
  "pytest==9.0.2",
  "ruff==0.15.9",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages]
find = { include = ["app*"], exclude = ["alembic*", "data*"] }

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"
